--- a/Glamboyant/Views/HairService/Create.cshtml
+++ b/Glamboyant/Views/HairService/Create.cshtml
@@ -4,17 +4,27 @@
     ViewBag.Title = "Create";
 }
 
-<h2 style="margin-top: 60px; 
+<h2 style="margin-top: 60px;
         text-align:center;
         color: hotpink;
         font-family: 'Megrim', cursive;
-        font-weight:600;">CREATE SERVICE</h2>
+        font-weight:600;">
+    CREATE SERVICE
+</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.ServiceType, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(o => o.ServiceType, Enum.GetValues(typeof(Glamboyant.Data.ServiceType)).Cast<Glamboyant.Data.ServiceType>().Select(x => new SelectListItem { Text = x.ToString(), Value = ((int)x).ToString() }))
+            @Html.ValidationMessageFor(model => model.ServiceType, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
