--- a/Glamboyant/Views/Account/Login.cshtml
+++ b/Glamboyant/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Glamboyant.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "LOG IN";
 }
 
 <h2 style="margin-top: 60px; 
