--- a/Glamboyant/Views/Account/Register.cshtml
+++ b/Glamboyant/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Glamboyant.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "SIGN UP";
 }
 
 <h2 style="margin-top: 60px; 
