--- a/Glamboyant/Views/Home/Contact.cshtml
+++ b/Glamboyant/Views/Home/Contact.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "CONTACT";
 }
-<h2>@ViewBag.Title.</h2>
+<h2 style="margin-top: 60px; 
+        text-align:center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;">@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <address>
