--- a/Glamboyant/Views/Home/Contact.cshtml
+++ b/Glamboyant/Views/Home/Contact.cshtml
@@ -5,17 +5,17 @@
         text-align:center;
         color: hotpink;
         font-family: 'Megrim', cursive;
-        font-weight:600;">@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+        font-weight:600;">@ViewBag.Title</h2>
+@*<h3>@ViewBag.Message</h3>*@
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+<address class="text-center">
+    <h3>Glamboyant</h3><br />
+    Indianapolis, IN 46202<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    317.123.4567
 </address>
 
-<address>
+@*<address>
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+</address>*@
