--- a/Glamboyant/Views/Appointment/Create.cshtml
+++ b/Glamboyant/Views/Appointment/Create.cshtml
@@ -17,8 +17,14 @@
 
 <div class="form-horizontal">
     <hr />
-    @User.Identity.GetUserName()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+    @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+
+    @User.Identity.GetUserName()
+        </div>
+    </div>
     <div class="form-group">
         @Html.LabelFor(model => model.AppointmentDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
