--- a/Glamboyant/Views/HairService/Index.cshtml
+++ b/Glamboyant/Views/HairService/Index.cshtml
@@ -78,7 +78,7 @@
                     @Html.DisplayFor(modelItem => item.ServiceType)
                 </div>
 
-                <div>
+                <div style="font-size: 20px;">
                     @Html.DisplayFor(modelItem => item.Name)
                 </div>
                 <div>
