--- a/Glamboyant/Views/Home/Index.cshtml
+++ b/Glamboyant/Views/Home/Index.cshtml
@@ -51,19 +51,19 @@
             <h3 style="color:hotpink;">Blowout</h3>
             <p>Wet hair with a blowout and iron work catered to your preferred style.</p>
             </br>
-            <p style="color:hotpink;">Starting at $55</p>
+            <a href="@Url.Action("Index", "Appointment")" style="color:hotpink;">Starting at $55</a>
         </div>
         <div class="col-md-4" style="        box-shadow: 0 0 5px 3px lightgrey;   width:370px;    margin-right:15px;">
             <h3 style="color:hotpink;">Manicure</h3>
             <p>Choice of our polish or yours with shaping, cuticles, lotion, and option for shellac.</p>
             </br>
-            <p style="color:hotpink;">Starting at $40</p>
+            <a href="@Url.Action("Index", "Appointment")" style="color:hotpink;">Starting at $40</a>
         </div>
         <div class="col-md-4" style="box-shadow: 0 0 5px 3px lightgrey; width: 370px;">
             <h3 style="color:hotpink;">Makeup</h3>
             <p>Natural, sexy, or dramatic; we'll create the perfect look for you.</p>
             </br>
-            <p style="color:hotpink;">Starting at $85</p>
+            <a href="@Url.Action("Index", "Appointment")" style="color:hotpink;">Starting at $85</a>
         </div>
     </div>
 
