--- a/Glamboyant/Views/Home/Index.cshtml
+++ b/Glamboyant/Views/Home/Index.cshtml
@@ -47,19 +47,19 @@
         <h2 style="text-align:center;">Just a few of our popular services</h2>
         </br>
         </br>
-        <div class="col-md-4" style="box-shadow: 0 0 5px 3px lightgrey; margin-right:15px; width:370px;">
+        <div class="col-md-4" style="box-shadow: 0 0 5px 3px hotpink; margin-right:15px; width:370px; padding-bottom: 10px;">
             <h3 style="color:hotpink;">Blowout</h3>
             <p>Wet hair with a blowout and iron work catered to your preferred style.</p>
             </br>
             <a href="@Url.Action("Index", "Appointment")" style="color:hotpink;">Starting at $55</a>
         </div>
-        <div class="col-md-4" style="        box-shadow: 0 0 5px 3px lightgrey;   width:370px;    margin-right:15px;">
+        <div class="col-md-4" style="box-shadow: 0 0 5px 3px hotpink; width:370px; margin-right:15px; padding-bottom:10px;">
             <h3 style="color:hotpink;">Manicure</h3>
             <p>Choice of our polish or yours with shaping, cuticles, lotion, and option for shellac.</p>
             </br>
             <a href="@Url.Action("Index", "Appointment")" style="color:hotpink;">Starting at $40</a>
         </div>
-        <div class="col-md-4" style="box-shadow: 0 0 5px 3px lightgrey; width: 370px;">
+        <div class="col-md-4" style="box-shadow: 0 0 5px 3px hotpink; width: 370px; padding-bottom: 10px;">
             <h3 style="color:hotpink;">Makeup</h3>
             <p>Natural, sexy, or dramatic; we'll create the perfect look for you.</p>
             </br>
