--- a/Glamboyant/Views/Appointment/Delete.cshtml
+++ b/Glamboyant/Views/Appointment/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Glamboyant.Models.AppointmentModels.AppointmentDetail
-
+@using Microsoft.AspNet.Identity;
 @{
     ViewBag.Title = "Delete";
 }
@@ -9,7 +9,9 @@
         color: hotpink;
         font-family: 'Megrim', cursive;
         font-weight:600;
-">DELETE APPOINTMENT</h2>
+">
+    DELETE APPOINTMENT
+</h2>
 
 <h3 style="text-align:center;">Are you sure you want to delete this appointment?</h3>
 <div>
@@ -20,8 +22,8 @@
 
 
         @*<dd>
-            @Html.DisplayFor(model => model.AppointmentID)
-        </dd>*@
+                @Html.DisplayFor(model => model.AppointmentID)
+            </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.AppointmentDate)
@@ -60,12 +62,13 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UserID)
+            @User.Identity.GetUserName()
         </dd>
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
